services/elasticsearch/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    name: elastic
  - port: 9300
    name: elastic-next
  clusterIP: None
  selector:
    app: elasticsearch
